--- a/RecipeApp/app/src/main/res/layout/row_items.xml
+++ b/RecipeApp/app/src/main/res/layout/row_items.xml
@@ -28,8 +28,11 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="176dp"
+                android:adjustViewBounds="false"
+                android:background="@color/primary"
+                android:cropToPadding="false"
                 android:scaleType="centerCrop"
-                app:srcCompat="@mipmap/ic_launcher_round"
+                app:srcCompat="@drawable/ic_image"
                 tools:ignore="ImageContrastCheck" />
         </androidx.cardview.widget.CardView>
 
