--- a/RecipeApp/app/src/main/res/layout/activity_main.xml
+++ b/RecipeApp/app/src/main/res/layout/activity_main.xml
@@ -88,100 +88,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:clickable="true"
-            app:checkedChip="@id/chip_vegan8"
+            style="@style/Widget.App.Chip"
             app:singleLine="true"
             app:singleSelection="true">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_vegan8"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:fontFamily="@font/montserrat_light"
-                android:text="vegetarian"
-                app:chipBackgroundColor="@color/chip_colors_background"
-                app:chipStrokeColor="@color/primary"
-                app:chipStrokeWidth="1dp"
-                android:textColor="@color/chip_colors_text"
-                app:checkedIconEnabled="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_vegan7"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:fontFamily="@font/montserrat_light"
-                android:text="vegan"
-                app:chipBackgroundColor="@color/chip_colors_background"
-                app:chipStrokeColor="@color/primary"
-                app:chipStrokeWidth="1dp"
-                android:textColor="@color/chip_colors_text"
-                app:checkedIconEnabled="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_vegan6"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:fontFamily="@font/montserrat_light"
-                android:text="gluten free"
-                app:chipBackgroundColor="@color/chip_colors_background"
-                app:chipStrokeColor="@color/primary"
-                app:chipStrokeWidth="1dp"
-                android:textColor="@color/chip_colors_text"
-                app:checkedIconEnabled="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_vegan5"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:fontFamily="@font/montserrat_light"
-                android:text="paleo"
-                app:chipBackgroundColor="@color/chip_colors_background"
-                app:chipStrokeColor="@color/primary"
-                app:chipStrokeWidth="1dp"
-                android:textColor="@color/chip_colors_text"
-                app:checkedIconEnabled="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_vegan4"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:fontFamily="@font/montserrat_light"
-                android:text="ketogenenic"
-                app:chipBackgroundColor="@color/chip_colors_background"
-                app:chipStrokeColor="@color/primary"
-                app:chipStrokeWidth="1dp"
-                android:textColor="@color/chip_colors_text"
-                app:checkedIconEnabled="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_vegan3"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:fontFamily="@font/montserrat_light"
-                android:text="vegan"
-                app:chipBackgroundColor="@color/chip_colors_background"
-                app:chipStrokeColor="@color/primary"
-                app:chipStrokeWidth="1dp"
-                android:textColor="@color/chip_colors_text"
-                app:checkedIconEnabled="false" />
         </com.google.android.material.chip.ChipGroup>
     </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
