--- a/RecipeApp/app/src/main/res/layout/activity_main.xml
+++ b/RecipeApp/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_width="409dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -28,7 +27,7 @@
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="What would you like to cook?"
+        android:text="@string/what_would_you_like_to_cook"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/card_search"
@@ -63,7 +62,8 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:fontFamily="@font/montserrat_medium"
-            android:hint="Recipe"
+            android:hint="@string/recipe"
+            android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             android:singleLine="true"
