--- a/RecipeApp/app/src/main/res/layout/row_items.xml
+++ b/RecipeApp/app/src/main/res/layout/row_items.xml
@@ -64,74 +64,111 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title">
 
-            <ImageView
-                android:id="@+id/imageView2"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:scaleType="fitStart"
-                android:src="@drawable/ic_thumbs_up" />
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/label_likes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2.5dp"
-                android:layout_marginEnd="30dp"
-                android:textAlignment="center"
-                tools:text="256" />
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/ic_thumbs_up" />
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:scaleType="fitStart"
-                android:src="@drawable/ic_clock" />
+                <TextView
+                    android:id="@+id/activity_recipe_details_likes_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:textAlignment="center"
+                    android:textColor="@color/grey"
+                    tools:text="256" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/label_minutes"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2.5dp"
-                android:layout_marginEnd="30dp"
-                tools:text="30" />
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:scaleType="fitStart"
-                android:src="@drawable/ic_dollar_sign" />
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/ic_clock" />
 
-            <TextView
-                android:id="@+id/label_money"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2.5dp"
-                android:layout_marginEnd="30dp"
-                tools:text="112.93" />
+                <TextView
+                    android:id="@+id/activity_recipe_details_time_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:textColor="@color/grey"
+                    tools:text="30" />
+            </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:scaleType="fitStart"
-                android:src="@drawable/ic_heart" />
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/label_health"
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/ic_dollar_sign" />
+
+                <TextView
+                    android:id="@+id/activity_recipe_details_price_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:textColor="@color/grey"
+                    tools:text="112.93" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2.5dp"
-                android:layout_marginEnd="30dp"
-                tools:text="30" />
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:scaleType="fitStart"
+                    android:src="@drawable/ic_heart" />
+
+                <TextView
+                    android:id="@+id/activity_recipe_details_health_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:textColor="@color/grey"
+                    tools:text="30" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
