--- a/RecipeApp/app/src/main/res/drawable/ic_dollar_sign.xml
+++ b/RecipeApp/app/src/main/res/drawable/ic_dollar_sign.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="@color/darkgrey"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M17,5H9.5a3.5,3.5 0,0 0,0 7h5a3.5,3.5 0,0 1,0 7H6"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="@color/darkgrey"
       android:strokeLineCap="round"/>
 </vector>
