--- a/RecipeApp/app/src/main/res/drawable/ic_thumbs_up.xml
+++ b/RecipeApp/app/src/main/res/drawable/ic_thumbs_up.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="@color/darkgrey"
       android:strokeLineCap="round"/>
 </vector>
