--- a/RecipeApp/app/src/main/res/values/colors.xml
+++ b/RecipeApp/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#353434</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#C4C4C4</color>
+    <color name="darkgrey">#8E8C8C</color>
+    <color name="lightgrey">#C4C4C4</color>
 </resources>
