--- a/RecipeApp/app/src/main/res/layout/activity_recipe_details.xml
+++ b/RecipeApp/app/src/main/res/layout/activity_recipe_details.xml
@@ -11,6 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck">
 
         <LinearLayout
@@ -26,7 +30,7 @@
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <androidx.cardview.widget.CardView
-                android:layout_width="409dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-16dp"
                 app:cardCornerRadius="16dp">
@@ -185,11 +189,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
+                        android:overScrollMode="never"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_servings_label">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/activity_recipe_details_instructions_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
+                        android:overScrollMode="never"
                         app:layout_constraintBottom_toTopOf="@+id/button_open_recipe"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_servings_label" />
+                        app:layout_constraintTop_toBottomOf="@+id/activity_recipe_details_ingredients_recycler_view" />
 
                     <Button
                         android:id="@+id/button_open_recipe"
